# archiver

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  conanfile.txt
inc/: Archiver.hpp  img.h
lib/: README.md
src/: Archiver.cpp  Binarization.cpp  Binarization.hpp  BlurDetection.cpp  BlurDetection.hpp  ColorBalance.cpp  ColorBalance.hpp  Correct.hpp  Cropping.cpp  Cropping.hpp  Deblur.cpp  Deblur.hpp  Denoising.cpp  Denoising.hpp  Deskew.cpp  Deskew.hpp  FormatConvert.cpp  FormatConvert.hpp  ImageProcessing.hpp  Resize.cpp  Resize.hpp  Rotate.cpp  Rotate.hpp  SauvolaBinarization.cpp  SauvolaBinarization.h  Smoothing.cpp  Smoothing.hpp  Thinning.cpp  Thinning.hpp  Warp.cpp  Warp.hpp  logger.cpp  logger.hpp
testData/: adobeTest.tiff
